Add tests and new tasks to build.gradle

--- a/CA1/part2/gradle_basic_demo/build.gradle
+++ b/CA1/part2/gradle_basic_demo/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     // Use Apache Log4J for logging
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
+    testImplementation 'junit:junit:4.12'
 }
  
 
@@ -67,4 +68,21 @@ tasks.register('runServer', JavaExec) {
     mainClass = "basic_demo.ChatServerApp"
 
     args '59001'
+}
+
+task backup(type: Copy) {
+    group = "DevOps"
+    description = "Copies the sources of the application to a backup folder"
+
+    from 'src'
+    into 'backup'
+}
+
+task archive(type: Zip) {
+    group = "DevOps"
+    description = "Creates a zip archive of the source code"
+
+    from 'src'
+    archiveFileName = 'src_backup.zip'
+    destinationDir(file('build'))
 }
