updated build.gradle and package.json

--- a/CA1/part3/react-and-spring-data-rest-basic/build.gradle
+++ b/CA1/part3/react-and-spring-data-rest-basic/build.gradle
@@ -5,6 +5,13 @@ plugins {
 	id "org.siouan.frontend-jdk17" version "8.0.0"
 }
 
+frontend {
+	nodeVersion = "16.20.2"
+	assembleScript = "run build"
+	cleanScript = "run clean"
+	checkScript = "run check"
+}
+
 group = 'com.greglturnquist'
 version = '0.0.1-SNAPSHOT'
 
