--- a/CA1/part3/react-and-spring-data-rest-basic/package.json
+++ b/CA1/part3/react-and-spring-data-rest-basic/package.json
@@ -24,14 +24,6 @@
     "react-dom": "^16.5.2",
     "rest": "^1.3.1"
   },
-  "scripts": {
-    "webpack": "webpack",
-    "build": "npm run webpack",
-    "check": "echo Checking frontend",
-    "clean": "echo Cleaning frontend",
-    "lint": "echo Linting frontend",
-    "test": "echo Testing frontend"
-  },
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
@@ -39,5 +31,15 @@
     "babel-loader": "^8.0.2",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
+  },
+  "packageManager": "npm@9.6.7",
+  "scripts": {
+    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
+    "webpack": "webpack",
+    "build": "npm run webpack",
+    "check": "echo Checking frontend",
+    "clean": "echo Cleaning frontend",
+    "lint": "echo Linting frontend",
+    "test": "echo Testing frontend"
   }
 }
