--- a/CA1/part3/react-and-spring-data-rest-basic/build.gradle
+++ b/CA1/part3/react-and-spring-data-rest-basic/build.gradle
@@ -5,12 +5,6 @@ plugins {
 	id "org.siouan.frontend-jdk17" version "8.0.0"
 }
 
-frontend {
-	nodeVersion = "16.20.2"
-	assembleScript = "run build"
-	cleanScript = "run clean"
-	checkScript = "run check"
-}
 
 group = 'com.greglturnquist'
 version = '0.0.1-SNAPSHOT'
@@ -37,3 +31,21 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+frontend {
+	nodeVersion = "16.20.2"
+	assembleScript = "run build"
+	cleanScript = "run clean"
+	checkScript = "run check"
+}
+
+task copyJar(type: Copy) {
+	dependsOn bootJar
+	from bootJar.outputs
+	into file("dist")
+}
+
+task cleanWebpack(type: Delete) {
+	delete 'src/main/resources/static/built'
+}
+clean.dependsOn cgleanWebpack
