--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
+### Vagrant ###
+.vagrant/
+
 # Eclipse m2e generated files
 # Eclipse Core
 .project
