--- a/CA1/part3/react-and-spring-data-rest-basic/src/main/resources/application.properties
+++ b/CA1/part3/react-and-spring-data-rest-basic/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.data.rest.base-path=/api
 server.servlet.context-path=/basic-0.0.1-SNAPSHOT
 spring.datasource.url=jdbc:h2:tcp://192.168.33.11:9092/./jpadb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
