--- a/CA2/part4/docker-compose.yml
+++ b/CA2/part4/docker-compose.yml
@@ -1,36 +1,33 @@
+version: '3.8'
+
 services:
   db:
-    build:
-      context: ./db
-    container_name: ca2p4-db
+    build: ./db
     ports:
       - "9092:9092"
       - "8082:8082"
     volumes:
-      - h2data:/usr/src/app
+      - ./data:/usr/src/data-backup
     networks:
-      - ca2net
+      my_custom_network:
+        ipv4_address: 192.168.56.11
 
   web:
-    build:
-      context: ./web
-    container_name: ca2p4-web
+    build: ./web
     ports:
       - "8080:8080"
+    networks:
+      my_custom_network:
+        ipv4_address: 192.168.56.10
     depends_on:
       - db
-    environment:
-      SPRING_DATASOURCE_URL:      jdbc:h2:tcp://db:9092/./test
-      SPRING_DATASOURCE_USERNAME: sa
-      SPRING_DATASOURCE_PASSWORD:
-      SPRING_H2_CONSOLE_ENABLED:  "true"
-      SPRING_H2_CONSOLE_PATH:     /h2-console
-    networks:
-      - ca2net
 
 volumes:
-  h2data:
+  db_data: {}
 
 networks:
-  ca2net:
+  my_custom_network:
     driver: bridge
+    ipam:
+      config:
+      - subnet: "192.168.56.0/24"
