--- a/CA2/part4/web/Dockerfile
+++ b/CA2/part4/web/Dockerfile
@@ -1,30 +1,24 @@
 FROM tomcat:10.1-jdk17-temurin
 
-# Install necessary tools and dependencies
-RUN apt-get update -y && \
-    apt-get install -y sudo nano git nodejs npm && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+RUN apt-get update \
+&& apt-get install -y \
+git \
+nano \
+nodejs \
+npm \
+&& rm -rf /var/lib/apt/lists/*
 
-# Create build directory
-RUN mkdir -p /tmp/build
+WORKDIR /usr/src/app
 
-# Set working directory
-WORKDIR /tmp/build/
+RUN git clone https://github.com/NunoNC/devops-24-25-1241919.git .
 
-# Clone the repository
-RUN git clone https://github.com/NunoNC/devops-24-25-1241919.git
+WORKDIR /usr/src/app/CA1/part3/react-and-spring-data-rest-basic
 
-# Move to the directory containing the Gradle wrapper
-WORKDIR /tmp/build/devops-24-25-1241919/CA1/part3/react-and-spring-data-rest-basic
+RUN chmod +x gradlew \
+    && ./gradlew bootWar \
+    && cp build/libs/react-and-spring-data-rest-basic-0.0.1-SNAPSHOT-plain.war /usr/local/tomcat/webapps/basic-0.0.1-SNAPSHOT.war
 
-# Ensure gradlew is executable and build the application
-RUN chmod +x gradlew && \
-    ./gradlew clean build \
-    && cp build/libs/react-and-spring-data-rest-basic-0.0.1-SNAPSHOT-plain.war /usr/local/tomcat/webapps/
 
-# Expose Tomcat port
 EXPOSE 8080
 
-# Start Tomcat server
 CMD ["catalina.sh", "run"]
