--- a/CA1/part3/react-and-spring-data-rest-basic/build.gradle
+++ b/CA1/part3/react-and-spring-data-rest-basic/build.gradle
@@ -3,8 +3,9 @@ plugins {
 	id 'org.springframework.boot' version '3.4.3'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id "org.siouan.frontend-jdk17" version "8.0.0"
-}
+	id 'war'
 
+}
 
 group = 'com.greglturnquist'
 version = '0.0.1-SNAPSHOT'
@@ -20,12 +21,28 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	runtimeOnly 'com.h2database:h2'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+		runtimeOnly 'com.h2database:h2'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+		implementation 'org.springframework.boot:spring-boot-starter-tomcat'
+		implementation 'org.springframework.boot:spring-boot-starter'
+
+	}
+
+	bootJar {
+		enabled = false
+	}
+
+	bootWar {
+		enabled = true
+	}
+
+
 }
 
 tasks.named('test') {
@@ -44,7 +61,6 @@ task copyJar(type: Copy) {
 	from bootJar.outputs
 	into file("dist")
 }
-
 task cleanWebpack(type: Delete) {
 	delete 'src/main/resources/static/built'
 }
