--- a/CA1/part3/react-and-spring-data-rest-basic/build.gradle
+++ b/CA1/part3/react-and-spring-data-rest-basic/build.gradle
@@ -33,6 +33,14 @@ dependencies {
 	}
 }
 
+bootJar {
+	enabled = false
+}
+
+bootWar {
+	enabled = true
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
