--- a/CA3/react_and_spring_data_rest_basic/Jenkinsfile
+++ b/CA3/react_and_spring_data_rest_basic/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
         DOCKER_IMAGE = "nunonelascruz/jenkins-image"
         DOCKER_REGISTRY = "https://index.docker.io/v1/"
         REPO_URL = 'https://github.com/NunoNC/devops-24-25-1241919.git'
+        DOCKER_HOST = 'tcp://host.docker.internal:2375'
     }
 
     stages {
@@ -28,13 +29,13 @@ pipeline {
                         WORKDIR /app
 
                         # Copy the JAR file from the host to the container
-                        COPY build/libs/*.war app.war
+                        COPY build/libs/*.jar app.jar
 
                         # Expose the port that the application will run on
                         EXPOSE 8080
 
                         # Run the JAR file
-                        ENTRYPOINT ["java", "-war", "app.war"]
+                        ENTRYPOINT ["java", "-jar", "app.jar"]
                         '''
                     }
                 }
@@ -54,7 +55,7 @@ pipeline {
                 dir('CA1/part3/react-and-spring-data-rest-basic') {
                     echo 'Testing...'
                     sh './gradlew test'
-                    junit '**/build/test-results/test/*.xml'
+                    junit '**/build/test-results/**/*.xml'
                 }
             }
         }
@@ -71,16 +72,15 @@ pipeline {
             steps {
                 dir('CA1/part3/react-and-spring-data-rest-basic') {
                     echo 'Archiving...'
-                    archiveArtifacts artifacts: 'build/libs/*.war', allowEmptyArchive: true
+                    archiveArtifacts artifacts: 'build/libs/*.jar', allowEmptyArchive: true
                 }
             }
         }
         stage('Build Docker Image') {
             steps {
                 dir('CA1/part3/react-and-spring-data-rest-basic') {
+                    echo 'Building Docker Image...'
                     script {
-                        echo 'Building Docker Image...'
-                        sh 'docker info'
                         def app = docker.build("${env.DOCKER_IMAGE}:${env.BUILD_ID}", '.')
                         docker.withRegistry(env.DOCKER_REGISTRY, env.DOCKER_CREDENTIALS_ID) {
                             app.push()
