--- a/CA3/react_and_spring_data_rest_basic/Jenkinsfile
+++ b/CA3/react_and_spring_data_rest_basic/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'main', url: env.REPO_URL
+                git branch: 'master', url: env.REPO_URL
             }
         }
 
