--- a/CA3/react_and_spring_data_rest_basic/Jenkinsfile
+++ b/CA3/react_and_spring_data_rest_basic/Jenkinsfile
@@ -7,6 +7,7 @@ pipeline {
         DOCKER_REGISTRY       = 'https://index.docker.io/v1/'
         REPO_URL              = 'https://github.com/NunoNC/devops-24-25-1241919.git'
         DOCKER_HOST           = 'tcp://host.docker.internal:2375'
+        JAR_NAME              = 'react-and-spring-data-rest-basic-0.0.1-SNAPSHOT.jar'
     }
 
     stages {
@@ -22,7 +23,7 @@ pipeline {
                     writeFile file: 'Dockerfile', text: '''\
 FROM eclipse-temurin:17-jdk
 WORKDIR /app
-COPY build/libs/*.jar app.jar
+COPY build/libs/${env.JAR_NAME} app.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","app.jar"]
 '''
@@ -67,7 +68,7 @@ ENTRYPOINT ["java","-jar","app.jar"]
         stage('Archive') {
             steps {
                 dir('CA1/part3/react-and-spring-data-rest-basic') {
-                    archiveArtifacts artifacts: 'build/libs/*.jar', fingerprint: true
+                    archiveArtifacts artifacts: 'build/libs/${env.JAR_NAME}', fingerprint: true
                 }
             }
         }
