--- a/CA3/react_and_spring_data_rest_basic/Jenkinsfile
+++ b/CA3/react_and_spring_data_rest_basic/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
                     writeFile file: 'Dockerfile', text: '''\
 FROM eclipse-temurin:17-jdk
 WORKDIR /app
-COPY build/libs/react-and-spring-data-rest-basic-0.0.1-SNAPSHOT.jar.jar app.jar
+COPY build/libs/react-and-spring-data-rest-basic-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","app.jar"]
 '''
@@ -67,7 +67,7 @@ ENTRYPOINT ["java","-jar","app.jar"]
         stage('Archive') {
             steps {
                 dir('CA1/part3/react-and-spring-data-rest-basic') {
-                    archiveArtifacts artifacts: 'build/libs/react-and-spring-data-rest-basic-0.0.1-SNAPSHOT.jar', fingerprint: true
+                    archiveArtifacts artifacts: 'build/libs/*.jar', fingerprint: true
                 }
             }
         }
